--- a/src/app/dashboard/components/course-registration/lessons/lessons.component.html
+++ b/src/app/dashboard/components/course-registration/lessons/lessons.component.html
@@ -66,4 +66,5 @@
         [pageSizeOptions]="[10, 15, 20]"
         showFirstLastButtons>
     </mat-paginator>
+    <button mat-raised-button (click)="goBack()" style="background: var(--main-color2); color: white;">Regresar</button>
 </div>
