--- a/src/app/dashboard/components/exercises/exercises-list/exercises-list.component.html
+++ b/src/app/dashboard/components/exercises/exercises-list/exercises-list.component.html
@@ -36,7 +36,7 @@
           <button
             mat-stroked-button
             color="primary"
-            matTooltip="Editar curso"
+            matTooltip="Editar ejercicio"
             (click)="openDialog(element)">
             <mat-icon style="color: darkgoldenrod;">edit</mat-icon>
           </button>
