--- a/src/app/course-view/components/evaluation/evaluation-finish/evaluation-finish.component.html
+++ b/src/app/course-view/components/evaluation/evaluation-finish/evaluation-finish.component.html
@@ -1,12 +1,24 @@
 <main>
     <section class="end-text">
-       <h2 *ngIf="!revitionView"> {{ textoFinal}}</h2>
-       <h2 *ngIf="revitionView">Resultado de tu prueba</h2>
-       <p *ngIf="test?.retroalimentacion === 1">Debias obtener un {{test?.porcentaje}}% para aprobar.</p>
-       <p *ngIf="test?.retroalimentacion === 1">Has obtenido un resultado de {{result}}%</p>
-       <p *ngIf="revition">Hay preguntas pendientes de revisión por el tutor.</p>
+        <h2 *ngIf="!revitionView"> {{ textoFinal}}</h2>
+        <h2 *ngIf="revitionView">Resultado de tu prueba</h2>
+        <h2
+            *ngIf="test?.retroalimentacion === 2 || mostrarResultados === 2"
+            style="color: #b71c1c;">
+                Revisión no permitida
+        </h2>
+        <p *ngIf="test?.retroalimentacion === 1">Debias obtener un {{test?.porcentaje}}% para aprobar.</p>
+        <!-- nota obtenida -->
+        <p
+        *ngIf="test?.retroalimentacion === 1 && (mostrarResultados !== 2 && mostrarResultados !== 5)">
+            Has obtenido un resultado de {{result}}%
+        </p>
+        <p *ngIf="revition">Hay preguntas pendientes de revisión por el tutor.</p>
     </section>
-    <section class="answers-revition" *ngIf="test?.retroalimentacion === 1">
+    <section
+        class="answers-revition"
+        *ngIf="(mostrarResultados !== 2 && mostrarResultados !== 3 )
+                && test?.retroalimentacion === 1 && !revitionAll">
         <div class="answers-list" *ngFor="let item of answers; let i = index">
             <p>{{'pregunta ' + (i + 1)}}</p>
             <!-- respuesta correcta -->
@@ -23,7 +35,92 @@
             <p *ngIf="item.tipoPregunta === 5">Pendiente por revisión</p>
         </div>
     </section>
+    <section
+        class="total-revition"
+        *ngIf="((mostrarResultados !== 2 && mostrarResultados !== 3 )
+                && test?.retroalimentacion === 1 && revitionAll) || mostrarResultados === 5">
+        <div class="questions-and-answers" *ngFor="let item of answers; let i = index">
+            <!-- opcion unica -->
+            <div *ngIf="item.tipoPregunta === 1">
+                <p class="q-number">{{'pregunta ' + (i + 1) + '. '}}</p>
+                <p>{{ item.pregunta }}</p>
+                <p class="q-a-title">Tu respuesta:</p>
+                <p>{{ item.respuestaSeleccionada }}</p>
+                <p class="q-a-title">Respuesta Correcta</p>
+                <p>{{ item.respuestaCorrecta }}</p>
+            </div>
+            <!-- opcion multiple -->
+            <div *ngIf="item.tipoPregunta === 2">
+                <p class="q-number">{{'pregunta ' + (i + 1) + '. '}}</p>
+                <p>{{ item.pregunta }}</p>
+                <p class="q-a-title">Tus respuestas:</p>
+                <div class="q-mult" *ngFor="let q of item.opcionesEscogidas; let j = index">
+                    <p *ngIf="q">{{ letters[j] + '. ' + parseHTML(item.respuestasorg[j].answer) }}</p>
+                </div>
+                <p class="q-a-title">Respuestas Correctas</p>
+                <div class="q-mult" *ngFor="let r of item.respuestasorg">
+                    <p *ngIf="r.respuesta">{{ letters[r.value - 1] + '. ' + parseHTML(r.answer) }}</p>
+                </div>
+            </div>
+            <!-- preguntas respuesta libre -->
+            <div *ngIf="item.tipoPregunta === 3">
+                <p class="q-number">{{'pregunta ' + (i + 1) + '. '}}</p>
+                <p>{{ qFormatter(item.pregunta) }}</p>
+                <p class="q-a-title">Tu respuesta:</p>
+                <div class="q-free" *ngFor="let q of item.opcionesEscogidas">
+                    <p>{{ q.answer }}</p>
+                </div>
+                <p class="q-a-title">Respuesta Correcta</p>
+                <div class="q-free" *ngFor="let r of item.respuestas">
+                    <p>{{ r }}</p>
+                </div>
+            </div>
+            <!-- preguntas de relacionar -->
+            <div *ngIf="item.tipoPregunta === 4">
+                <p class="q-number">{{'pregunta ' + (i + 1) + '. '}}</p>
+                <p>{{ item.pregunta }}</p>
+                <p class="q-a-title">Tu respuesta:</p>
+                <div class="q-relation" *ngFor="let q of item.respuestas">
+                    <h5>pregunta</h5>
+                    <p>{{ q.answer }}</p>
+                    <h5>relación</h5>
+                    <p>{{ q.selOpt }}</p>
+                </div>
+                <p class="q-a-title">Respuesta Correcta</p>
+                <div class="q-relation" *ngFor="let q of item.respuestas">
+                    <h5>pregunta</h5>
+                    <p>{{ q.answer }}</p>
+                    <h5>relación</h5>
+                    <p>{{ q.option }}</p>
+                </div>
+            </div>
+            <!-- respuesta libre -->
+            <div *ngIf="item.tipoPregunta === 5">
+                <p class="q-number">{{'pregunta ' + (i + 1) + '. '}}</p>
+                <p>{{ item.pregunta }}</p>
+                <p class="q-a-title">Tu respuesta:</p>
+                <p>{{ parseHTML(item.opcionesEscogidas) }}</p>
+                <p class="q-a-title">Respuesta Correcta</p>
+                <p>Debe calificarla el tutor</p>
+            </div>
+            <mat-icon *ngIf="item.valor === 100 && item.tipoPregunta !== 5" style="color: green;">check_circle</mat-icon>
+            <p *ngIf="item.valor === 100 && item.tipoPregunta !== 5">Correcta</p>
+            <!-- Parcialmente correcta -->
+            <mat-icon *ngIf="item.valor > 0 && item.valor < 100 && item.tipoPregunta !== 5" style="color: orange;">error</mat-icon>
+            <p *ngIf="item.valor > 0 && item.valor < 100 && item.tipoPregunta !== 5">Parcial</p>
+            <!-- repuesta incorrecta -->
+            <mat-icon *ngIf="item.valor === 0 && item.tipoPregunta !== 5" style="color: tomato;">error</mat-icon>
+            <p *ngIf="item.valor === 0 && item.tipoPregunta !== 5">Incorrecta</p>
+            <!-- Respuestas libres -->
+            <mat-icon *ngIf="item.tipoPregunta == 5" style="color: orange;">error</mat-icon>
+            <p *ngIf="item.tipoPregunta === 5">Pendiente por revisión</p>
+
+        </div>
+    </section>
     <section *ngIf="revitionView">
-        <button mat-raised-button color="primary" style="margin: 16px;" (click)="goBack()">Regresar</button>
+        <button mat-raised-button color="primary" style="margin: 16px;" (click)="goBack(true)">Regresar</button>
+    </section>
+    <section *ngIf="!revitionView">
+        <button mat-raised-button color="primary" style="margin: 16px;" (click)="goBack(false)">Regresar</button>
     </section>
 </main>
