--- a/src/app/course-view/components/evaluation/evaluation-finish/evaluation-finish.component.scss
+++ b/src/app/course-view/components/evaluation/evaluation-finish/evaluation-finish.component.scss
@@ -42,3 +42,63 @@ main {
         }
     }
 }
+
+.total-revition {
+    width: 95%;
+    height: auto;
+    margin: 1rem 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    .questions-and-answers {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 8px 16px;
+        padding: 16px;
+        border: 1px solid #e0e0e0;
+        border-radius: 5px;
+        box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+
+        .q-number {
+            color: var(--main-color2);
+            font-size: 1.2rem;
+            font-weight: 600;
+        }
+
+        .q-a-title {
+            font-size: 1rem;
+            font-weight: 500;
+        }
+
+        .q-relation, .q-free {
+            display: flex;
+            flex-direction: column;
+            margin: 8px;
+            padding: 8px;
+            border: 1px solid var(--main-color2);
+            border-radius: 5px;
+            background-color: azure;
+
+            h5 {
+                font-weight: 900;
+                color: var(--main-color2);
+            }
+        }
+
+        .q-free {
+            p {
+                margin: 0 16px;
+            }
+        }
+
+        .q-mult {
+            p {
+                margin: 0 24px;
+                margin-bottom: 16px;
+                font-weight: 400;
+            }
+        }
+    }
+}
