--- a/src/app/course-view/components/evaluation/evaluation-home/evaluation-home.component.scss
+++ b/src/app/course-view/components/evaluation/evaluation-home/evaluation-home.component.scss
@@ -3,7 +3,7 @@
 }
 
 main {
-    background: white;
+    background: #eceff1;
     box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
     border-radius: 4px;
     margin: 36px auto;
@@ -13,7 +13,7 @@ main {
     align-items: center;
 }
 
-section {
+.normal-test {
     display: grid;
     grid-template-columns: 0.6fr 1fr;
     grid-template-rows: auto;
@@ -114,7 +114,132 @@ section {
                     padding: 8px 16px;
                     margin: 0;
                 }
+
+                p:nth-child(2) {
+                    width: 185px;
+                }
+
+                p:nth-child(3) {
+                    width: 61px;
+                }
+
+                p:nth-child(4) {
+                    color: var(--main-color2);
+                    cursor: pointer;
+                    font-size: 1rem;
+                }
             }
+        }
+    }
+}
+
+.tarea {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+
+    .tarea-info {
+
+        h2 {
+            color: var(--main-color2);
+            font-weight: 600;
+            font-size: 1.2rem;
+            margin-top: 24px;
+        }
+    }
+
+    .question {
+        background: white;
+        border: 1px solid gray;
+        border-radius: 5px;
+        padding: 16px;
+        margin: 16px 32px;
+    }
+
+    .button {
+        margin-top: 16px;
+        margin-bottom: 24px;
+    }
+}
+
+// upload file section
+.upload-image-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 16px;
+}
+
+.upload-image-main picture {
+    display: flex;
+    justify-content: center;
+    margin-top: 16px;
+    width: 50%;
+}
+
+.upload-image-main img {
+    max-width: 100%;
+    box-sizing: content-box;
+    margin: 0 auto;
+}
+
+.up-btn {
+    background: var(--main-color2);
+    //background: #37474f;
+    color: white;
+    //width: 350px;
+    margin-bottom: 8px;
+}
+
+.up-btn mat-icon {
+    margin-right: 8px;
+}
+
+.upload-image-main .btn-upload {
+    & input[type=file] {
+        display: none;
+    }
+}
+
+.fileUploaded {
+    margin: 24px 0;
+    background: #f6f6f6;
+    padding: 24px;
+    border-radius: 5px;
+}
+
+.fileUploaded a {
+    font-size: 1.2rem;
+    color: var(--main-color2);
+
+}
+
+.revision-tarea {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 24px;
+
+    h2 {
+        margin-top: 16px;
+    }
+
+    h4 {
+        color: var(--main-color2);
+        font-weight: 600;
+    }
+
+    .repuesta-subida {
+        margin: 8px 0;
+        background: #f6f6f6;
+        padding: 24px;
+        border-radius: 5px;
+
+        a {
+            font-size: 1rem;
+            color: var(--main-color2);
         }
     }
 }
