--- a/src/app/course-view/components/evaluation/evaluation-finish/evaluation-finish.component.html
+++ b/src/app/course-view/components/evaluation/evaluation-finish/evaluation-finish.component.html
@@ -38,7 +38,7 @@
     <section
         class="total-revition"
         *ngIf="((mostrarResultados !== 2 && mostrarResultados !== 3 )
-                && test?.retroalimentacion === 1 && revitionAll) || mostrarResultados === 5">
+                && test?.retroalimentacion === 1 && revitionAll) || mostrarResultados === 5 && test?.retroalimentacion === 1">
         <div class="questions-and-answers" *ngFor="let item of answers; let i = index">
             <!-- opcion unica -->
             <div *ngIf="item.tipoPregunta === 1">
