quitar error del porcentaje y cambiar tipo en el password del usuario

--- a/src/app/dashboard/components/users/user-profile/user-profile.component.html
+++ b/src/app/dashboard/components/users/user-profile/user-profile.component.html
@@ -161,7 +161,7 @@
                 <mat-label>Contraseña actual</mat-label>
                 <input
                     autocomplete="off"
-                    type="text"
+                    type="password"
                     matInput
                     formControlName="oldPassword"
                     tabIndex=1 />
@@ -173,7 +173,7 @@
                 <mat-label>Contraseña nueva</mat-label>
                 <input
                     autocomplete="off"
-                    type="text"
+                    type="password"
                     matInput
                     formControlName="newPassword"
                     tabIndex=1 />
