ads vista arreglada

--- a/src/app/dashboard/components/navigation/navigation.component.html
+++ b/src/app/dashboard/components/navigation/navigation.component.html
@@ -35,6 +35,10 @@
             <mat-divider></mat-divider>
           </mat-list-item>
           <mat-list-item class="secondary-list">
+            <a mat-list-item routerLink="/dashboard/carreras">Carreras</a>
+            <mat-divider></mat-divider>
+          </mat-list-item>
+          <mat-list-item class="secondary-list">
             <a mat-list-item routerLink="/dashboard/cursos">Cursos</a>
             <mat-divider></mat-divider>
           </mat-list-item>
