--- a/src/app/dashboard/components/cursos/ads-curso/ads-curso.component.html
+++ b/src/app/dashboard/components/cursos/ads-curso/ads-curso.component.html
@@ -39,21 +39,29 @@
 
                 <th  mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
                 <td mat-cell *matCellDef="let element" class="buttons">
-                    <div *ngIf="admin" >
-                        <button
-                            (click)="goToEditAnuncio(element.id)"
-                            mat-stroked-button
-                            color="primary"
-                            matTooltip="Editar anuncio"
-                            >
-                            <mat-icon style="color: darkgoldenrod;">edit</mat-icon>
-                        </button>
-                        <button
-                        (click)="obtenerIdAnuncioEliminar(element.id)"
-                        matTooltip="Borrar anuncio" mat-stroked-button color="secondary"><!--(click)="deleteUser(element)"-->
-                            <mat-icon>delete</mat-icon>
-                        </button>
-                    </div>
+                    <button
+                    (click)="openModalVista(element)"
+                    mat-stroked-button
+                    color="primary"
+                    matTooltip="Editar anuncio"
+                    >
+                    <mat-icon style="color: rgba(0, 114, 121, 0.95);">visibility</mat-icon>
+                    </button>
+                    <button
+                        *ngIf="admin"
+                        (click)="goToEditAnuncio(element.id)"
+                        mat-stroked-button
+                        color="primary"
+                        matTooltip="Editar anuncio"
+                        >
+                        <mat-icon style="color: darkgoldenrod;">edit</mat-icon>
+                    </button>
+                    <button
+                    *ngIf="admin"
+                    (click)="obtenerIdAnuncioEliminar(element.id)"
+                    matTooltip="Borrar anuncio" mat-stroked-button color="secondary"><!--(click)="deleteUser(element)"-->
+                        <mat-icon>delete</mat-icon>
+                    </button>
                 </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
