--- a/src/app/dashboard/components/carreras/create-carreras/create-carreras.component.scss
+++ b/src/app/dashboard/components/carreras/create-carreras/create-carreras.component.scss
@@ -81,4 +81,18 @@
         align-self: center;
         width: 60%;
         margin-top: 24px;
-      }
+    }
+
+    .buttons {
+    align-self: center;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    margin: 16px;
+    }
+
+    .buttons button {
+    margin-right: 16px;
+    background: var(--main-color2);
+    color: white;
+    }
