--- a/src/app/course-view/components/reply-foro/reply-foro.component.html
+++ b/src/app/course-view/components/reply-foro/reply-foro.component.html
@@ -34,7 +34,7 @@
         <button class="corner-button | corner-button2"  (click)="goToForo()"> <span>Cancelar</span> </button>
     </div>
     <div *ngIf="this.tipo === 'editar'">
-        <button class="corner-button" (click)="editarForo()"> <span>Editar</span> </button>
+        <button class="corner-button edit-btn" (click)="editarForo()"> <span>Editar</span> </button>
     </div>
 </div>
 
