--- a/src/app/course-view/components/foro/foro.component.scss
+++ b/src/app/course-view/components/foro/foro.component.scss
@@ -10,6 +10,7 @@ $dur: .5s;
     width:90%;
     margin: 1.5rem auto;
     padding:1.5rem;
+    background: white;
     h3
     {
       font-weight:bold;
@@ -103,9 +104,10 @@ $dur: .5s;
 
   .cita
   {
-    background-color: #eeeeee;
+    background-color: white;
     color:black;
     padding:1rem 0.5rem 0.5rem 0.5rem;
+    border: 1px solid #bdbdbd;
     border-radius: 1rem;
     margin-bottom: 1rem;
   }
