--- a/src/app/dashboard/components/exercises/exercises-rev-detail/exercises-rev-detail/exercises-rev-detail.component.scss
+++ b/src/app/dashboard/components/exercises/exercises-rev-detail/exercises-rev-detail/exercises-rev-detail.component.scss
@@ -84,6 +84,15 @@ main {
         border-radius: 5px;
         box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 
+        a {
+            cursor: pointer;
+            text-decoration: none;
+            color: var(--main-color2);
+            font-size: 1.1rem;
+            font-weight: 500;
+            margin: 8px 0 32px 0;
+        }
+
         .q-number {
             color: var(--main-color2);
             font-size: 1.2rem;
@@ -151,6 +160,7 @@ main {
 
     .edit-result {
         width: 50%;
+        margin-top: 16px;
 
         .config-container {
             width: 95%;
