carreras editado terminado

--- a/src/app/dashboard/components/carreras/carreras.component.html
+++ b/src/app/dashboard/components/carreras/carreras.component.html
@@ -12,4 +12,60 @@
         routerLink="/carreras/create"
         style="background: var(--main-color2); color: white;">Crear nuevo</button>
 
+        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+        <!-- nombre de la carrera -->
+        <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombre">Nombre</th>
+            <td
+            mat-cell
+            *matCellDef="let element"
+            matTooltip="Ver detalle de la carrera"
+            class="name">
+                {{ element.nombre }}
+            </td>
+        </ng-container>
+    
+        <!-- botones de acción -->
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
+            <td mat-cell *matCellDef="let element" class="buttons">
+            <button
+            mat-stroked-button
+            color="primary"
+            matTooltip="Agregar estudiante"
+            > <mat-icon>person_add</mat-icon></button>
+            <button
+                mat-stroked-button
+                color="primary"
+                matTooltip="Configurar descripción general">
+                <mat-icon style="color: darkgreen;">grid_on</mat-icon>
+            </button>
+            <button
+                [routerLink]="'/carreras/edit/'+element.id"
+                mat-stroked-button
+                color="primary"
+                matTooltip="Editar carrera">
+                <mat-icon style="color: darkgoldenrod;">edit</mat-icon>
+            </button>
+            <button
+                mat-stroked-button
+                color="primary"
+                matTooltip="Ver carrera">
+                <mat-icon style="color: black;">info</mat-icon>
+            </button>
+            <button mat-stroked-button color="secondary">
+                <mat-icon>delete</mat-icon>
+            </button>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+    
+        <mat-paginator
+            [pageSizeOptions]="[10, 15, 20]"
+            showFirstLastButtons
+        ></mat-paginator>
+
 </div>
