--- a/src/app/dashboard/components/carreras/carreras.component.scss
+++ b/src/app/dashboard/components/carreras/carreras.component.scss
@@ -11,3 +11,38 @@
     margin-right: 48px;
     margin-bottom: 24px;
 }
+
+table {
+    width: 95%;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.buttons {
+    text-align: center;
+}
+
+.buttons .mat-stroked-button {
+    margin-left: 5px;
+    min-width: 40px;
+} 
+
+
+.mat-header-cell {
+    color: black;
+    text-align: center;
+}
+
+.mat-cell {
+color:rgba(0,0,0,.54);
+padding: 0;
+margin: 0;
+}
+
+td.mat-cell:last-of-type {
+padding: 0;
+}
+
+.name {
+cursor: pointer;
+}
