--- a/src/app/dashboard/components/carreras/edit-carreras/edit-carreras.component.html
+++ b/src/app/dashboard/components/carreras/edit-carreras/edit-carreras.component.html
@@ -2,7 +2,7 @@
     <form [formGroup]="formCarreras" (ngSubmit)="validarFormulario()">
         <div class="title">
             <mat-icon>class</mat-icon>
-            <h2>Crear nueva carrera</h2>
+            <h2>Editar carrera</h2>
         </div>
         <div class="upload-image-main">
             <div class="image-upload">
@@ -41,7 +41,7 @@
                 type="submit"
                 tabIndex=4
                 mat-raised-button
-                >Crear carrera</button>
+                >Editar carrera</button>
                 <a mat-raised-button (click)="volverAListaCarreras()" tabIndex=5>Cancelar</a>
         </div>
     </form>
