finalizado la descripcion de la carrera

--- a/src/app/dashboard/components/carreras/carreras.component.html
+++ b/src/app/dashboard/components/carreras/carreras.component.html
@@ -3,7 +3,7 @@
     <h2>Gestión de Carreras</h2>
     <mat-form-field appearance="legacy" class="search">
         <mat-label>Buscar</mat-label>
-        <input matInput placeholder="Placeholder"><!--(keyup)="applyFilter($event.target.value)" -->
+        <input matInput placeholder="Placeholder" (keyup)="applyFilter($event.target.value)" ><!---->
         <mat-icon matSuffix>search</mat-icon>
         <mat-hint>puede buscar por cualquier campo</mat-hint>
     </mat-form-field>
@@ -31,13 +31,21 @@
             <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
             <td mat-cell *matCellDef="let element" class="buttons">
             <button
+            [routerLink]="'/carreras/add-estudiantes/'+element.id"
             mat-stroked-button
             color="primary"
             matTooltip="Agregar estudiante"
             > <mat-icon>person_add</mat-icon></button>
             <button
+            [routerLink]="'/carreras/add-curso/'+element.id"
+            mat-stroked-button
+            color="primary"
+            matTooltip="Agregar curso"
+            > <mat-icon>auto_stories</mat-icon></button>
+            <button
                 mat-stroked-button
                 color="primary"
+                (click)="openDialog(element.id)"
                 matTooltip="Configurar descripción general">
                 <mat-icon style="color: darkgreen;">grid_on</mat-icon>
             </button>
