carreras una parte finalizada

--- a/src/app/dashboard/components/carreras/carreras.component.html
+++ b/src/app/dashboard/components/carreras/carreras.component.html
@@ -57,6 +57,7 @@
                 <mat-icon style="color: darkgoldenrod;">edit</mat-icon>
             </button>
             <button
+                [routerLink]="'/carreras/detail/'+element.id"
                 mat-stroked-button
                 color="primary"
                 matTooltip="Ver carrera">
