--- a/src/app/dashboard/components/navigation/navigation.component.html
+++ b/src/app/dashboard/components/navigation/navigation.component.html
@@ -70,7 +70,7 @@
             <mat-divider></mat-divider>
           </mat-list-item>
           <mat-list-item class="secondary-list">
-            <a mat-list-item routerLink="#">Carreras</a>
+            <a mat-list-item (click)="goToCarreraCatalogo()">Carreras</a>
             <mat-divider></mat-divider>
           </mat-list-item>
         </mat-list>
