--- a/src/app/dashboard/components/carreras/descripcion-carrera/descripcion-carrera.component.html
+++ b/src/app/dashboard/components/carreras/descripcion-carrera/descripcion-carrera.component.html
@@ -63,6 +63,23 @@
                 <mat-card class="example-card">
                     <mat-card-header>
                         <div mat-card-avatar class="example-header-image"></div>
+                        <mat-card-title>Objetivos</mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <div [innerHTML]="this.carrera.objetivo"></div>
+                        <div *ngIf="!this.carrera.objetivo">No establecido</div>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <button mat-button (click)="descriptionEdit('Objetivos')">Editar</button>
+                        <button mat-button (click)="descriptionDelete('Objetivos')">Eliminar</button>
+                    </mat-card-actions>
+                </mat-card>
+            </div>
+
+            <div class="item-container">
+                <mat-card class="example-card">
+                    <mat-card-header>
+                        <div mat-card-avatar class="example-header-image"></div>
                         <mat-card-title>Duración</mat-card-title>
                     </mat-card-header>
                     <mat-card-content>
